[gd_scene load_steps=5 format=3 uid="uid://q68ngocptjm8"]

[ext_resource type="Script" path="res://Scripts/map_node.gd" id="1_03cc4"]
[ext_resource type="Texture2D" uid="uid://bdhl54t3id5mv" path="res://Assets/Sprites/Star.png" id="2_ykc3o"]
[ext_resource type="Texture2D" uid="uid://bnnmnhfqri3mn" path="res://Assets/Sprites/map_cursor.png" id="3_ocy0w"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p3r7t"]
radius = 0.11

[node name="Map Node" type="Node3D"]
script = ExtResource("1_03cc4")

[node name="Star" type="Node3D" parent="."]

[node name="StarSprite" type="Sprite3D" parent="Star"]
modulate = Color(0.571422, 0.83366, 1, 1)
pixel_size = 0.02
billboard = 1
texture_filter = 0
texture = ExtResource("2_ykc3o")

[node name="Cursor" type="Sprite3D" parent="Star"]
pixel_size = 0.02
billboard = 1
texture_filter = 0
texture = ExtResource("3_ocy0w")

[node name="Area3D" type="Area3D" parent="Star"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Star/Area3D"]
shape = SubResource("SphereShape3D_p3r7t")

[connection signal="input_event" from="Star/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Star/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Star/Area3D" to="." method="_on_area_3d_mouse_exited"]
